@@ -4,35 +4,51 @@ import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Data;
 import lombok.NoArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import top.bulgat.common.base.util.StringUtils;
+
+import java.util.Objects;
+import java.util.Set;
 
 /**
  * SDK 运行时配置。
  */
+@Slf4j
 @Data
 @Builder
 @NoArgsConstructor
 @AllArgsConstructor
 public class MigrationSdkProperties {
 
+    // ----------config-center----------
+    public static final String ENV_CONFIG_CENTER_ENABLE ="ENV_CONFIG_CENTER_ENABLE";
     /** 配置中心地址环境变量。 */
-    public static final String ENV_CONFIG_CENTER_URL = "MIGRATION_CONFIG_CENTER_URL";
-    /** Diff 服务地址环境变量。 */
-    public static final String ENV_DIFF_SERVICE_URL = "MIGRATION_DIFF_SERVICE_URL";
-    /** 默认超时环境变量。 */
-    public static final String ENV_DEFAULT_TIMEOUT = "MIGRATION_DEFAULT_TIMEOUT";
-    /** 内部令牌环境变量。 */
-    public static final String ENV_INTERNAL_TOKEN = "MIGRATION_INTERNAL_TOKEN";
+    public static final String ENV_CONFIG_CENTER_ADDRESS = "MIGRATION_CONFIG_CENTER_ADDRESS";
+    /** 配置中心内部令牌环境变量。 */
+    public static final String ENV_CONFIG_CENTER_INTERNAL_TOKEN="ENV_CONFIG_CENTER_INTERNAL_TOKEN";
     /** 缓存定时刷新间隔（秒）环境变量。 */
-    public static final String ENV_CACHE_REFRESH_INTERVAL = "MIGRATION_CACHE_REFRESH_INTERVAL";
-    /** 百分比路由策略环境变量。 */
-    public static final String ENV_PERCENTAGE_ROUTING_STRATEGY = "MIGRATION_PERCENTAGE_ROUTING_STRATEGY";
+    public static final String ENV_CACHE_REFRESH_INTERVAL_SECONDS = "ENV_CACHE_REFRESH_INTERVAL_SECONDS";
+    /**  */
+    public static final String ENV_CONFIG_CENTER_TIMEOUT = "ENV_CONFIG_CENTER_TIMEOUT";
 
-    private String configCenterUrl;
-    private String diffServiceUrl;
-    private int defaultTimeout;
-    private String internalToken;
+    // ---------------------------------
+    // ------------diff-service---------
+    public static final String ENV_DIFF_SERVICE_ENABLE = "ENV_DIFF_SERVICE_ENABLE";
+    /** Diff 服务地址环境变量。 */
+    public static final String ENV_DIFF_SERVICE_ADDRESS = "ENV_DIFF_SERVICE_ADDRESS";
+    /** Diff 服务内部令牌环境变量。 */
+    public static final String ENV_DIFF_SERVICE_INTERNAL_TOKEN = "ENV_DIFF_SERVICE_INTERNAL_TOKEN";
+
+    private Boolean configCenterEnable;
+    private String configCenterAddress;
+    private String configCenterInternalToken;
     private int cacheRefreshIntervalSeconds;
-    private String percentageRoutingStrategy;
+    private int configCenterTimeout;
+
+    private Boolean diffServiceEnable=true;
+    private String diffServiceAddress;
+    private String diffServiceInternalToken;
+//    private int diffServiceTimeout;
 
     /**
      * 从环境变量构建配置。
@@ -40,34 +56,15 @@ public class MigrationSdkProperties {
      * @return SDK 配置
      */
     public static MigrationSdkProperties fromEnv() {
-        int timeout = 5000;
-        String timeoutEnv = System.getenv(ENV_DEFAULT_TIMEOUT);
-        if (timeoutEnv != null) {
-            try {
-                timeout = Integer.parseInt(timeoutEnv);
-            } catch (NumberFormatException ignored) {
-                timeout = 5000;
-            }
-        }
-
-        int cacheInterval = 60;
-        String cacheIntervalEnv = System.getenv(ENV_CACHE_REFRESH_INTERVAL);
-        if (cacheIntervalEnv != null) {
-            try {
-                cacheInterval = Integer.parseInt(cacheIntervalEnv);
-            } catch (NumberFormatException ignored) {
-                cacheInterval = 60;
-            }
-        }
-
         return MigrationSdkProperties.builder()
-                .configCenterUrl(resolve(ENV_CONFIG_CENTER_URL, "http://localhost:8080"))
-                .diffServiceUrl(resolve(ENV_DIFF_SERVICE_URL, "http://localhost:8081"))
-                .internalToken(resolve(ENV_INTERNAL_TOKEN, "MIGRATION_DEFAULT_SDK_TOKEN"))
-                .defaultTimeout(timeout)
-                .cacheRefreshIntervalSeconds(cacheInterval)
-                .percentageRoutingStrategy(resolve(ENV_PERCENTAGE_ROUTING_STRATEGY,
-                        top.bulgat.migration.sdk.core.model.PercentageRoutingStrategy.HASH))
+                .configCenterAddress(resolve(ENV_CONFIG_CENTER_ADDRESS, "http://localhost:8080"))
+                .configCenterInternalToken(resolve(ENV_CONFIG_CENTER_INTERNAL_TOKEN,"ENV_CONFIG_CENTER_INTERNAL_TOKEN"))
+                .configCenterEnable(resolveBoolean(ENV_CONFIG_CENTER_ENABLE,null))
+                .cacheRefreshIntervalSeconds(resolveInteger(ENV_CACHE_REFRESH_INTERVAL_SECONDS,60))
+                .configCenterTimeout(resolveInteger(ENV_CONFIG_CENTER_TIMEOUT,5))
+                .diffServiceAddress(resolve(ENV_DIFF_SERVICE_ADDRESS, "http://localhost:8081"))
+                .diffServiceInternalToken(resolve(ENV_DIFF_SERVICE_INTERNAL_TOKEN, "ENV_DIFF_SERVICE_INTERNAL_TOKEN"))
+                .diffServiceEnable(resolveBoolean(ENV_DIFF_SERVICE_ENABLE,null))
                 .build();
     }
 
@@ -80,9 +77,31 @@ public class MigrationSdkProperties {
      */
     private static String resolve(String key, String defaultValue) {
         String value = System.getenv(key);
-        if (value == null || value.isBlank()) {
+        if (StringUtils.isBlank(value)) {
             return defaultValue;
         }
         return value;
+    }
+
+    private static Integer resolveInteger(String key,Integer defaultValue){
+        String value = System.getenv(key);
+        if (StringUtils.isBlank(value)) {
+            return defaultValue;
+        }
+        try {
+            return Integer.parseInt(value);
+        }catch (NumberFormatException e){
+            log.error("[resolveInteger] parse value failed,value={}",value,e);
+            return defaultValue;
+        }
+    }
+
+    private static Boolean resolveBoolean(String key, Boolean defaultValue) {
+        String value = System.getenv(key);
+        if (StringUtils.isBlank(value)) {
+            return defaultValue;
+        }
+        if(Set.of("true","false").contains(value)) return Objects.equals("true",value);
+        return null;
     }
 }
